@@ -224,32 +224,6 @@ Open_type_font::sub_fonts () const
   return lily_subfonts_;
 }
 
-LY_DEFINE (ly_font_sub_fonts, "ly:font-sub-fonts", 1, 0, 0,
-	  (SCM font),
-	   "Given the font metric @var{font} of an OpenType font, return the "
-	   "names of the subfonts within @var{font}.")
-{
-  Font_metric *fm = unsmob_metrics (font);
-  SCM_ASSERT_TYPE (fm, font, SCM_ARG1, __FUNCTION__, "font-metric");
-  return fm->sub_fonts ();
-}
-
-LY_DEFINE (ly_otf_font_glyph_info, "ly:otf-font-glyph-info", 2, 0, 0,
-	  (SCM font, SCM glyph),
-	   "Given the font metric @var{font} of an OpenType font, return the "
-	   "information about named glyph @var{glyph} (a string)")
-{
-  Modified_font_metric * fm
-    = dynamic_cast<Modified_font_metric*> (unsmob_metrics (font));
-  Open_type_font * otf = dynamic_cast<Open_type_font*> (fm->original_font ());
-  SCM_ASSERT_TYPE (otf, font, SCM_ARG1, __FUNCTION__, "OTF font-metric");
-  SCM_ASSERT_TYPE (scm_is_string (glyph), glyph, SCM_ARG1,
-		   __FUNCTION__, "string");
-
-  SCM sym = scm_string_to_symbol (glyph);
-  return scm_hashq_ref (otf->get_char_table (), sym, SCM_EOL);
-}
-
 SCM
 Open_type_font::get_char_table () const
 {
