@@ -1,3 +1,7 @@
+2005-03-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/open-type-font-scheme.cc:  new file.
+
 2005-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/lexer.ll (Lily_lexer):
